Tue Jan 24 15:15:00 PST 2006 William Brack
	* plugins/netcam_plugin.c: added a memset to clear data
	  before calling getaddrinfo (to cleanup a minor warning from
	  valgrind)
	* src/motion.[ch]: added a memset to clear data from the newly
	  allocated imgs.smartmask_final (to make valgrind happier);
	  relocated miscellaneous utility routines out of this module
	  and into a new module, utils.[ch]
	* src/utils.[ch]: new home for miscellaneous utility routines,
	  plus added some new routines for handling a "dictionary".
	  This is currently only used within newconfig.c, but may be
	  expanded.
	* src/newconfig.c: enhanced to utilise a "dictionary" to handle
	  accessing configuration parameters within a config section.
	  
Mon Jan 23 03:15:00 CET 2006 Angel Carpintero
	* src/plugin.c plugin.h : Added plugin_cleanup() to free 
	  the plugin handle resources and remove the goto from
	  plugin_load(). Also add mymalloc instead of malloc following
	  comments of Per.
	
Mon Jan 23 02:42:00 CET 2006 Angel Carpintero
	* src/motion.c motion.h: Added mystrndup() function to use with
	  the same behaviour of strndup().
	* src/newconfig.c: use mystrndup() replacing the previous attempt
	  to replace strndup().	

Sun Jan 22 09:15:00 PST 2006 William Brack
	* src/newconfig.c: further enhancement for the "dump" routine,
	  fixing problem with 'range' and printing section headers.

Sat Jan 21 13:33:00 PST 2006 William Brack
	* src/ Makefile.am, newconfig.c, motion.c: commented out areas
	  requiring webhttpd until Version 4 conversion gets further.
	* src/ dummymotion.h, fudge.h: removed from CVS
	* src/newconfig.c: (temporarily) added a new runtime option to
	  motion: -z {filename}.  If set, causes the (processed) config
	  data to be dumped out to {filename}.  This is useful for
	  testing the new configuration code.
	* src/ motion.c, newconfig.c, newconfig.h and plugins/v4l_plugin.c,
	  netcam_plugin.c, v4l_plugin.h, netcam_plugin.h, v4l_params.h,